setup html structure for broadcast graphics

--- a/index.html
+++ b/index.html
@@ -9,6 +9,41 @@
   <title>Broadcast Graphics</title>
 </head>
 <body>
+  <!-- Main Content -->
+  <main class="container">
+
+    <!-- Left Box -->
+    <div class="left-box">
+      <img src="ZTM.png" alt="zero to mastery logo">
+    </div>
+
+    <!-- Main Bar Container -->
+    <div class="main-bar-container">
+      <div class="gold-bar"></div>
+      <div class="black-bar">
+        <!-- Main Text -->
+        <span class="main-bar-text">
+          Daryl DEL ROSARIO
+        </span>
+      </div>
+
+      <!-- Bottom Bar -->
+      <div class="bottom-bar">
+        <!-- Bottom Text -->
+        <span class="bottom-bar-text">
+          ADVANCED CSS SPECIALIST, THE REAL DECODER
+        </span>
+      </div>
+
+      <!-- Top Bar -->
+      <div class="top-bar-container">
+        <!-- Top Text -->
+        <span class="top-bar-text">
+          STAY TUNED FOR MORE!
+        </span>
+      </div>
+    </div>
+  </main>
   
 
   <script src="script.js"></script>
