complete main and gold bar styles

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <!-- Left Box -->
     <div class="left-box">
-      <img src="ZTM.png" alt="zero to mastery logo">
+      <img src="./ZTM.png" alt="zero to mastery logo" class="img-container">
     </div>
 
     <!-- Main Bar Container -->
