complete styles for top and bottom text

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </div>
 
       <!-- Top Bar -->
-      <div class="top-bar-container">
+      <div class="top-bar">
         <!-- Top Text -->
         <span class="top-bar-text">
           STAY TUNED FOR MORE!
